# mophongo

./: .fits  .gitattributes  .gitignore  AGENTS.md  CHECKLIST.md  CLAUDE.md  GUIDE.md  IMPLEMENTATION_GUIDE.md  LICENSE  README.md  dump.txt  mophongo_abstract.rtf  psf_map.py  pyproject.toml
data/: uds-half-80mas-f444w_kernel_f770w.geojson  uds-half-80mas-f770w_psf.geojson  uds-half-f444w_psf.geojson  uds-large-f444w_kernel_f770w.geojson  uds-large-f444w_psf.geojson  uds-large-f770w_psf.geojson  uds-test-40mas-f770w_sci.fits  uds-test-40mas-f770w_wht.fits  uds-test-80mas-f444w_kernel_f770w.fits  uds-test-80mas-f444w_kernel_f770w.geojson  uds-test-80mas-f770w_psf.fits  uds-test-80mas-f770w_psf.geojson  uds-test-80mas-f770w_sci.fits  uds-test-80mas-f770w_wht.fits  uds-test-LW_seg.fits  uds-test-f115w_sci.fits  uds-test-f115w_wcs.csv  uds-test-f115w_wht.fits  uds-test-f444w_kernel_f770w.fits  uds-test-f444w_kernel_f770w.geojson  uds-test-f444w_psf.fits  uds-test-f444w_psf.geojson  uds-test-f444w_sci.fits  uds-test-f444w_seg.fits  uds-test-f444w_wcs.csv  uds-test-f444w_wht.fits  uds-test-f770w_psf.fits  uds-test-f770w_psf.geojson  uds-test-f770w_sci.fits  uds-test-f770w_wcs.csv  uds-test-f770w_wht.fits  uds-test2-40mas-f444w_kernel_f770w.fits  uds-test2-40mas-f444w_kernel_f770w.geojson  uds-test2-40mas-f770w_psf.fits  uds-test2-40mas-f770w_psf.geojson  uds-test2-40mas-f770w_sci.fits  uds-test2-40mas-f770w_wht.fits  uds-test2-80mas-f444w_kernel_f770w.fits  uds-test2-80mas-f444w_kernel_f770w.geojson  uds-test2-80mas-f770w_psf.fits  (+26 more)
examples/: UDS_MIRI_F770W_mirim.fits  UDS_NRCA1_F115W_nrca1.fits  UDS_NRCA2_F115W_nrca2.fits  UDS_NRCA3_F115W_nrca3.fits  UDS_NRCA4_F115W_nrca4.fits  UDS_NRCA5_F444W_nrca5.fits  UDS_NRCB1_F115W_nrcb1.fits  UDS_NRCB2_F115W_nrcb2.fits  UDS_NRCB3_F115W_nrcb3.fits  UDS_NRCB4_F115W_nrcb4.fits  UDS_NRCB5_F444W_nrcb5.fits  check_psf.ipynb  downsample_demo.ipynb  full_pipeline.ipynb  generate_psf.ipynb  make_extended_psfs.ipynb  make_kernels.ipynb  make_stpsfs.ipynb  map_kernels.ipynb  photometry.cat  star_delete.ipynb  uds.ipynb
legacy/: deblending_overview.rtf  legacy_ideas.rtf
tests/: test_aperture_profile.py  test_astro_fit.py  test_astrometry.py  test_basis.py  test_benchmark.py  test_catalog.py  test_color_deblend.py  test_deblender.py  test_downsample.py  test_example.py  test_fit.py  test_jwst_psf.py  test_kernel_lookup.py  test_local_astrometry.py  test_photutils_deblend.py  test_pipeline.py  test_pipeline_aperture.py  test_pipeline_class.py  test_pipeline_dedup.py  test_pipeline_kernel_lookup.py  test_pipeline_multitemplate.py  test_pipeline_prune_templates.py  test_plot_result.py  test_psf.py  test_psf_ext_nrca5.fits  test_psf_map.py  test_realistic_pipeline.py  (+9 more)
(+115 files in other folders)
