[project]
name = "mophongo"
version = "0.0.1"
description = ""
authors = [
    {name = "Ivo Labbe",email = "ivolabbe@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.1,<3.0.0)",
    "scipy (>=1.16.0,<2.0.0)",
    "astropy (>=6.0,<7.0)",
    "photutils (>=1.9,<2.0)"
]

[tool.poetry]
packages = [{include = "mophongo", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
matplotlib = "^3.10.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
