[project]
name = "mophongo"
version = "0.0.1"
description = ""
authors = [
    {name = "Ivo Labbe",email = "ivolabbe@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy (>=2.2.1,<2.3.0)",
    "scipy (>=1.16.0,<2.0.0)",
    "astropy (>=6.0,<7.0)",
    "photutils (>=1.9,<2.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "reproject (>=0.14.1,<0.15.0)",
    "sep (>=1.4.1,<2.0.0)",
    "llvmlite (>=0.44.0,<0.45.0)",
    "drizzlepac (==3.9.1)",
    "grizli @ git+https://github.com/gbrammer/grizli.git"
]

[tool.poetry]
packages = [{include = "mophongo", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
matplotlib = "^3.10.3"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
