[project]
name = "mophongo"
version = "0.0.1"
description = ""
authors = [
    {name = "Ivo Labbe",email = "ivolabbe@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy (>=2.2.1,<2.3.0)",
    "scipy (>=1.16.0,<2.0.0)",
    "astropy (==7.1)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "reproject (>=0.14.1,<0.15.0)",
    "sep (>=1.4.1,<2.0.0)",
    "llvmlite (>=0.44.0,<0.45.0)",
    "drizzlepac (==3.9.1)",
    "sregion (>=1.4.2,<2.0.0)",
    "lmfit (>=1.3.3,<2.0.0)",
    "stpsf (>=2.1.0,<3.0.0)",
    "shapely (>=2.1.1,<3.0.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "joblib (>=1.5.1,<2.0.0)",
    "numba (>=0.61.2,<0.62.0)",
    "requests (>=2.32.4,<3.0.0)",
    "fsspec[http] (>=2025.7.0,<2026.0.0)",
]

[tool.poetry]
packages = [{include = "mophongo", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
matplotlib = "^3.10.3"
ipykernel = "^6.29.5"
stpsf = "^2.1.0"
webbpsf = "^2.0.0"
photutils = "^2.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
